# fuseki

./: .gitmodules  Cargo.toml  Makefile  README.md  fuseki.draft
.github/workflows/: ci.yml
src/: atari_game.rs  board.rs  chooser.rs  dragon_go_server.rs  drawing.rs  game_parse.rs  gtp.rs  machine_game.rs  main.rs  reset.rs  routine.rs
src/test_data/: basic.sgf  one-capture.sgf
