[package]
name = "fuseki"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.73.0"

[dependencies]
libremarkable = "0.7"
env_logger = "0.11"
log = "0.4"
gtp = "0.1.2"
lazy_static = "1"
serde_json = "1"
serde = {version="1", features = ["derive"]}
reqwest = {version = "0.12", features = ["blocking", "rustls-tls", "cookies"], default-features = false}
chrono = {version ="0.4", features = ["serde"]}
csv = "1"
sgf-parse = "4.2.7"

[dev-dependencies]
pretty_assertions = "1.4.1"
